--- a/advanced-programming.tex
+++ b/advanced-programming.tex
@@ -551,7 +551,7 @@ We now state some facts about convex cones without proof.
 	\begin{enumerate}[label=\roman*.]
 		\item $b \in \mathrm{cone}(A)$;
 		\item There is a hyperplane passing through $0$ of the form $h = \{x \in \R^m \mid y^Tx = 0\}$
-		      such that $\mathrm{cone}(A)$ is one one side of the cone
+		      such that $\mathrm{cone}(A)$ is on one side of the cone
 		      (i.e. $y^T a_i \geq 0$ for all $i = 1, \dots, n$) and $b$ lies on the othe side
 		      (i.e $y^T b < 0$).
 	\end{enumerate}
@@ -568,10 +568,25 @@ We now state some facts about convex cones without proof.
 	$h' = \{ x \in \R^m \mid y^T x = \gamma\}$ such that $y^T b < \gamma$ and $y^T c > \gamma$
 	for all $c \in C$. Note that since $0 \in C$ we have that $\gamma < 0$.
 
-	Now choose $h = \{ x \in \R^m \mid y^T x = 0\}$, then $0 \in h$, $y^T b < \gamma < 0$.
-	TODO: finish here
+	Now choose $h = \{ x \in \R^m \mid y^T x = 0\}$, then $0 \in h$, $y^T b < \gamma < 0$
+	therefore $b$ is on one side of $h$.
+	Now we want to prove that $y^Tc \geq 0$ for all $c \in C$ so that $h$ is the hyperplane we are
+	looking for.
+
+	Assume, by contradiction, that $y^T c < 0$ for some $c \in C$.
+	Then $\frac{2 \gamma}{y^T c} c \in C$ since $\frac{2 \gamma}{y^T c} \geq 0$ and
+	$C$ is a convex cone.
+	But then $y^T \frac{2 \gamma}{y^T c} c = 2 \gamma < \gamma$ which is a contradiction.
 \end{proof}
 
+\begin{corollary}{Farkas lemma in matrix form}{farkas-matrix}
+	Let $A \in \R^{m \cross n}$ and $b \in \R^m$.
+	Then exactly one of the following holds:
+	\begin{enumerate}[label=\roman*.]
+		\item There is $x \in \R^n$ such that $Ax = b$ and $x \geq 0$.
+		\item There is $y \in \R^m$ such that $y^T A \geq 0^T$ and $y^T b < 0$.
+	\end{enumerate}
+\end{corollary}
 
 \subsubsection{Strong duality}
 
